--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="home-img">
-            <img src="images/shreya.jpeg" alt="">
+            <img src="shreya.jpeg" alt="">
         </div>
     </section>
 
@@ -122,7 +122,7 @@
 
             <div class="wrapper">
                 <div class="project-item">
-                    <img src="images/quiz.jpg" alt="">
+                    <img src="quiz.jpg" alt="">
                     <h2>Online Quiz</h2>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
@@ -134,7 +134,7 @@
                     <p>Our online quiz project offers a wide range of interactive quizzes on various topics with features for user tracking and competition. With a user-friendly interface and engaging content, our platform aims to entertain, educate, and foster community interaction through quiz creation and sharing.</p>
                 </div>
                 <div class="project-item">
-                    <img src="images/cloned.jpg" alt="">
+                    <img src="cloned.jpg" alt="">
                     <h2>cloneweb</h2>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
@@ -146,7 +146,7 @@
                     <p>I am working on a project to clone a website, where I am creating a duplicate or similar version of an existing website by replicating its design, layout, and functionality. By cloning the website, I aim to learn more about web development and improve my skills in designing and coding.</p>
                 </div>
                 <div class="project-item">
-                    <img src="images/landing page.jpg" alt="">
+                    <img src="landing page.jpg" alt="">
                     <h2>Landing Page</h2>
                     <div class="rating">
                         <i class="fa-solid fa-star"></i>
